. AVM cut/copy item clipboard support  - AVM files and folders can be cut and copied to the clipboard  - AVM files and folders can be pasted (copied or moved) around a sandbox  - The usual "Copy of …" filename logic applies  - Cut and Copy actions now appear for AVM nodes (as appropriate for user permissions)  - Refactored logic for cut/copy into specific clipboard item classes - WorkspaceClipboardItem and AVMClipboardItem . Fixed unreported issue where the DownloadContentServlet was unable to open content for AVM paths containing a space character . Pager control border style alignment improvement
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/alfresco/HEAD/root@4943 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/source/web/css/main.css
+++ b/source/web/css/main.css
@@ -435,7 +435,7 @@ a.topToolbarLinkHighlight, a.topToolbarLinkHighlight:link, a.topToolbarLinkHighl
 
 .pager
 {
-   padding: 6px 4px 3px 4px;
+   padding: 3px;
    border: 1px dotted #cccccc;
 }
 
